# makecorner

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-test.yml  publish.yml
examples/: examples.ipynb
src/makecorner/: __init__.py  makecorner.py
