# contents of pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makecorner"
dynamic = ["version"]
description = "Publication-ready corner plots for posterior samples"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Tom Callister", email = "thomas.a.callister@gmail.com" },
]
dependencies = [
  "numpy>=1.26.4",
  "scipy>=1.10.1",
  "matplotlib>=3.6.1"
]

[tool.hatch.version]
path = "src/makecorner/__init__.py"

[project.urls]
"Source" = "https://github.com/tcallister/makecorner"
